--- a/index.html
+++ b/index.html
@@ -5,8 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="main.css">
 </head> 
-<body>
-    
+<body class="body">
+    <section class="navsec">
+        <nav>
+            <div class="navdiv">
+                <img class="logo" src="title.svg" alt="logo">
+            </div>
+        </nav>
+    </section>
+    <section>
+        <img id="banner" src="banner.png" alt="banner">
+    </section>
 </body>
 </html>
