added navbar elements (might modified later)

--- a/index.html
+++ b/index.html
@@ -13,6 +13,15 @@
             <div class="navdiv">
                 <img class="logo" src="title.svg" alt="logo">
             </div>
+            <div class="icondiv-left"> 
+                <img class="icon" src="Inventory Icon.svg" alt="inventory icon">
+                <img class="icon" src="Sell Icon.svg" alt="sell icon">
+                <img class="icon" src="Info Icon.svg" alt="info icon">
+            </div>
+            <div class="icondiv-right">
+                <img class="icon-right" src="Saved.svg" alt="saved icon">
+                <img class="icon-right" src="Share.svg" alt="share icon">
+            </div>
         </nav>
     </section>
     <section>
