added search bar and visual effects to the banner

--- a/index.html
+++ b/index.html
@@ -24,8 +24,13 @@
             </div>
         </nav>
     </section>
-    <section>
-        <img id="banner" src="banner.png" alt="banner">
+    <section class="bannersec">
+        <div class="bannerdiv">
+            <img class="banner" src="banner.png" alt="banner">
+            <div class="searchbardiv">
+                <img class="searchbar" src="Search Bar.svg" alt="search bar">
+            </div>
+        </div>
     </section>
 </body>
 </html>
