Modified the  banner section. Addeed input form

--- a/index.html
+++ b/index.html
@@ -28,7 +28,25 @@
         <div class="bannerdiv">
             <img class="banner" src="banner.png" alt="banner">
             <div class="searchbardiv">
-                <img class="searchbar" src="Search Bar.svg" alt="search bar">
+                <form action="">
+                    <label for="first_name"></label>
+                    <input type="text" placeholder="Search by any keyword"> <br>
+                    <input type="image" class="submit" src="Search Icon.svg" alt="Submit">
+                </form>
+            </div>
+            <div class="categorysearch"> 
+                <div id="BodyType">
+                    <p class="categorysearchtext">Body Type</p>
+                    <img src="Arrows.svg" alt="arrows">
+                </div>
+                <div  id="Make">
+                    <p class="categorysearchtext">Make</p>
+                    <img src="Arrows.svg" alt="arrows">
+                </div>
+                <div  id="SearchButtom">
+                    <p class="categorysearchtext">Search</p>
+                </div>
+
             </div>
         </div>
     </section>
