completed search section

--- a/index.html
+++ b/index.html
@@ -37,14 +37,14 @@
             <div class="categorysearch"> 
                 <div id="BodyType">
                     <p class="categorysearchtext">Body Type</p>
-                    <img src="Arrows.svg" alt="arrows">
+                    <img id="categorysearcharrow-1" src="Arrows.svg" alt="arrows">
                 </div>
                 <div  id="Make">
                     <p class="categorysearchtext">Make</p>
-                    <img src="Arrows.svg" alt="arrows">
+                    <img id="categorysearcharrow-2" src="Arrows.svg" alt="arrows">
                 </div>
-                <div  id="SearchButtom">
-                    <p class="categorysearchtext">Search</p>
+                <div  id="SearchButton">
+                    <p class="categorysearchtext-search">Search</p>
                 </div>
 
             </div>
