Finished bottom menu

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="main.css">
+    <script type="module" src="index.js"></script>
 </head> 
 <body class="body">
     <section class="navsec">
@@ -47,6 +48,53 @@
                     <p class="categorysearchtext-search">Search</p>
                 </div>
 
+            </div>
+        </div>
+    </section>
+    <section class="functionmenusec">
+        <div class="functionmenu">
+            <div class="sortdropdown">
+                <div class="sortdiv">
+                    <img id="Sort" src="sort.svg" alt="sort">
+                </div>
+                <nav class="sortnav">
+    
+                </nav>
+            </div>
+            <img id="Compare" src="Compare.svg" alt="compare">
+            <img id="Grid" src="Grid.svg" alt="grid">
+            <img id="List" src="List.svg" alt="list" >
+        </div>
+    </section>
+    <section class="productsec">
+    </section>
+    <section class="bottomsec">
+        <div id="map"></div>
+            <script
+                src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC6tHcHrwuDO00zWnrQVHvTnqyfbizuAvQ&callback=initMap&v=weekly"
+                defer
+            ></script>
+        </div>
+        <img id="bottomlogo" src="title.svg" alt="bottomlogo">
+        <div class="bottomcolumn">
+            <div class="bottomcolumnleft">
+                <h5 class="bottomcolumn-heading">Follow Us</h5>
+                <img id="facebook" src="facebook.svg" alt="facebook">
+                <img id="twitter" src="twitter.svg" alt="twitter">
+            </div>
+            <div class="bottomcolumnright">
+                <h5 class="bottomcolumn-heading">Career</h5>
+                <div id="bottomcolumn-text">
+                    View Available Jobs<br><br>Privacy Policy<br><br>Disclaimer Notice
+                </div>
+            </div>
+        </div>
+        <div id="bottom-info">
+            <div id="address">
+                Venice Blvd<br>Los Angeles, CA 90034<br>(424) 444-6030</div>
+            </div>
+            <div id="timetable">
+                Monday &ensp; &nbsp; 10:00AM - 7:00PM<br>Tuesday &ensp; &nbsp; 10:00AM - 7:00PM<br>Wednesday &nbsp; 10:00AM - 7:00PM<br>Thursday &ensp; &thinsp; 10:00AM - 7:00PM<br>Friday &ensp; &nbsp; &thinsp; 10:00AM - 7:00PM<br>Saturday &ensp; &nbsp; 10:00AM - 7:00PM<br>Sunday &ensp; &nbsp; &thinsp; 10:00AM - 7:00PM
             </div>
         </div>
     </section>
