finished side categor

--- a/index.html
+++ b/index.html
@@ -12,37 +12,37 @@
     <section class="navsec">
         <nav>
             <div class="navdiv">
-                <img class="logo" src="title.svg" alt="logo">
+                <img class="logo" src="images/title.svg" alt="logo">
             </div>
             <div class="icondiv-left"> 
-                <img class="icon" src="Inventory Icon.svg" alt="inventory icon">
-                <img class="icon" src="Sell Icon.svg" alt="sell icon">
-                <img class="icon" src="Info Icon.svg" alt="info icon">
+                <img class="icon" src="images/Inventory Icon.svg" alt="inventory icon">
+                <img class="icon" src="images/Sell Icon.svg" alt="sell icon">
+                <img class="icon" src="images/Info Icon.svg" alt="info icon">
             </div>
             <div class="icondiv-right">
-                <img class="icon-right" src="Saved.svg" alt="saved icon">
-                <img class="icon-right" src="Share.svg" alt="share icon">
+                <img class="icon-right" src="images/Saved.svg" alt="saved icon">
+                <img class="icon-right" src="images/Share.svg" alt="share icon">
             </div>
         </nav>
     </section>
     <section class="bannersec">
         <div class="bannerdiv">
-            <img class="banner" src="banner.png" alt="banner">
+            <img class="banner" src="images/banner.png" alt="banner">
             <div class="searchbardiv">
                 <form action="">
                     <label for="first_name"></label>
                     <input type="text" placeholder="Search by any keyword"> <br>
-                    <input type="image" class="submit" src="Search Icon.svg" alt="Submit">
+                    <input type="image" class="submit" src="images/Search Icon.svg" alt="Submit">
                 </form>
             </div>
             <div class="categorysearch"> 
                 <div id="BodyType">
                     <p class="categorysearchtext">Body Type</p>
-                    <img id="categorysearcharrow-1" src="Arrows.svg" alt="arrows">
+                    <img id="categorysearcharrow-1" src="images/Arrows.svg" alt="arrows">
                 </div>
                 <div  id="Make">
                     <p class="categorysearchtext">Make</p>
-                    <img id="categorysearcharrow-2" src="Arrows.svg" alt="arrows">
+                    <img id="categorysearcharrow-2" src="images/Arrows.svg" alt="arrows">
                 </div>
                 <div  id="SearchButton">
                     <p class="categorysearchtext-search">Search</p>
@@ -55,18 +55,130 @@
         <div class="functionmenu">
             <div class="sortdropdown">
                 <div class="sortdiv">
-                    <img id="Sort" src="sort.svg" alt="sort">
+                    <img id="Sort" src="images/sort.svg" alt="sort">
                 </div>
                 <nav class="sortnav">
     
                 </nav>
             </div>
-            <img id="Compare" src="Compare.svg" alt="compare">
-            <img id="Grid" src="Grid.svg" alt="grid">
-            <img id="List" src="List.svg" alt="list" >
+            <img id="Compare" src="images/Compare.svg" alt="compare">
+            <img id="Grid" src="images/Grid.svg" alt="grid">
+            <img id="List" src="images/List.svg" alt="list" >
         </div>
     </section>
     <section class="productsec">
+        <div id="productcolumn">
+            <div id="productcolumn-left">
+                <div class="grid grid-top">
+                    <div class="gridtopdiv gridtopdiv-1">
+                        <div class="headingdiv">
+                            <h3 class="headingdivtext">Price Range</h3>
+                        </div>
+                        <div class="scrollbardiv">
+                            <img class="scrollbar" src="images/Price Range.svg" alt="price range">
+                        </div>
+                    </div>
+                    <div class="gridtopdiv gridtopdiv-2">
+                        <div class="headingdiv">
+                            <h3 class="headingdivtext">Mileage Range</h3>
+                        </div>
+                        <div class="scrollbardiv">
+                            <img class="scrollbar" src="images/Mileage Range.svg" alt="price range">
+                        </div>
+                    </div>
+                    <div class="gridtopdiv gridtopdiv-3">
+                        <div class="headingdiv">
+                            <h3 class="headingdivtext">Year</h3>
+                        </div>
+                        <div class="scrollbardiv">
+                            <img class="scrollbar" src="images/Year.svg" alt="price range">
+                        </div>
+                    </div>
+                </div>
+                <div class="grid grid-bottom">
+                    <div class="gridcolumn gridcolumn-left" id="gdl1">
+                        <div class="category">Exterior Color</div>
+                    </div>
+                    <div class="gridcolumn gridcolumn-left" id="gdl2">
+                        <div class="category">Interior Color</div>
+                    </div>
+                    <div class="gridcolumn gridcolumn-left" id="gdl3">
+                        <div class="category">Drivertrain</div>
+                    </div>
+                    <div class="gridcolumn gridcolumn-left" id="gdl4">
+                        <div class="category">Fuel Type</div>
+                    </div>
+                    <div class="gridcolumn gridcolumn-left" id="gdl5">
+                        <div class="category">Transmission</div>
+                    </div>
+                    <div class="gridcolumn gridcolumn-left" id="gdl6">
+                        <div class="category">Cylinders</div>
+                    </div>
+                    <div class="gridcolumn gridcolumn-left" id="gdl7">
+                        <div class="category">MPG Highway</div>
+                    </div>
+                    <div class="gridcolumn gridcolumn-left" id="gdl8">
+                        <div class="category">MPG City</div>
+                    </div>
+                    <div class="gridcolumn gridcolumn-right" id="gdr1">
+                        <div class="categorydropdown">
+                            <div class="categorydropdowntext">All</div>
+                            <img class="categoryarrows" src="images/Arrows.svg" alt="categoryarrows">
+                        </div>
+                    </div>
+                    <div class="gridcolumn gridcolumn-right" id="gdr2">
+                        <div class="categorydropdown">
+                            <div class="categorydropdowntext">All</div>
+                            <img class="categoryarrows" src="images/Arrows.svg" alt="categoryarrows">
+                        </div>
+                    </div>
+                    <div class="gridcolumn gridcolumn-right" id="gdr3">
+                        <div class="categorydropdown">
+                            <div class="categorydropdowntext">All</div>
+                            <img class="categoryarrows" src="images/Arrows.svg" alt="categoryarrows">
+                        </div>
+                    </div>
+                    <div class="gridcolumn gridcolumn-right" id="gdr4">
+                        <div class="categorydropdown">
+                            <div class="categorydropdowntext">All</div>
+                            <img class="categoryarrows" src="images/Arrows.svg" alt="categoryarrows">
+                        </div>
+                    </div>
+                    <div class="gridcolumn gridcolumn-right" id="gdr5">
+                        <div class="categorydropdown">
+                            <div class="categorydropdowntext">All</div>
+                            <img class="categoryarrows" src="images/Arrows.svg" alt="categoryarrows">
+                        </div>
+                    </div>
+                    <div class="gridcolumn gridcolumn-right" id="gdr6">
+                        <div class="categorydropdown">
+                            <div class="categorydropdowntext">All</div>
+                            <img class="categoryarrows" src="images/Arrows.svg" alt="categoryarrows">
+                        </div>
+                    </div>
+                    <div class="gridcolumn gridcolumn-right" id="gdr7">
+                        <div class="categorydropdown">
+                            <div class="categorydropdowntext">All</div>
+                            <img class="categoryarrows" src="images/Arrows.svg" alt="categoryarrows">
+                        </div>
+                    </div>
+                    <div class="gridcolumn gridcolumn-right" id="gdr8">
+                        <div class="categorydropdown">
+                            <div class="categorydropdowntext">All</div>
+                            <img class="categoryarrows" src="images/Arrows.svg" alt="categoryarrows">
+                        </div>
+                    </div>
+                    <div id="feature">
+                        <div class="category featuretext">Features</div>
+                        <img class="categoryarrows featurearrow" src="images/Arrows.svg" alt="categoryarrows">
+                    </div>
+                    
+                </div>
+            </div>
+            <div id="productcolumn-right">
+
+            </div>
+        </div>
     </section>
     <section class="bottomsec">
         <div id="map"></div>
@@ -75,12 +187,12 @@
                 defer
             ></script>
         </div>
-        <img id="bottomlogo" src="title.svg" alt="bottomlogo">
+        <img id="bottomlogo" src="images/title.svg" alt="bottomlogo">
         <div class="bottomcolumn">
             <div class="bottomcolumnleft">
                 <h5 class="bottomcolumn-heading">Follow Us</h5>
-                <img id="facebook" src="facebook.svg" alt="facebook">
-                <img id="twitter" src="twitter.svg" alt="twitter">
+                <img id="facebook" src="images/facebook.svg" alt="facebook">
+                <img id="twitter" src="images/twitter.svg" alt="twitter">
             </div>
             <div class="bottomcolumnright">
                 <h5 class="bottomcolumn-heading">Career</h5>
