changed home to index

--- a/comparison.html
+++ b/comparison.html
@@ -52,7 +52,7 @@
     </section>
     <section class="comparisonsec">
         <div class="back">
-            <a href="home.html">
+            <a href="index.html">
                 <img class="Back" src="images/Back.svg" alt="go back">
             </a>
         </div>
