--- a/product.html
+++ b/product.html
@@ -52,7 +52,7 @@
         </div>
     </section>
     <section class="productsec2">
-        <a href="home.html">
+        <a href="index.html">
             <img class="Back" src="images/Back.svg" alt="go back">
         </a>
         <div>
