--- a/comparison.html
+++ b/comparison.html
@@ -74,6 +74,7 @@
         </div>
         <div id="stats">
             <div class="s1">
+                <!-- 2 overelapped column can also reach this I guess, but would be pretty messy. Stuck to grid because it's logically easier and more fluent-->
                 <div class="s1-1">
                     <span class="statstitle">Overview</span>
                 </div>
